# mimic-icd-coder

./: .gitignore  .pre-commit-config.yaml  ACKNOWLEDGMENTS.md  DECISIONS.md  LICENSE  LOCAL_SETUP.md  README.md  SECURITY.md  databricks.yml  mimic-icd-coder.code-workspace  pyproject.toml
.github/workflows/: ci.yml
configs/: dev.example.yml
jobs/: bronze.py  train_baseline.py
notebooks/: 01_eda.ipynb
reports/: EDA_Report.docx  baseline_error_analysis.md  baseline_per_label_table.md  data_card.md  eda_paper.md  eda_report.md  eval_report.qmd  model_card.md
scripts/: check_notebook_phi.py  dua_audit.py  error_analysis.py  run_transformer_debug.py
src/mimic_icd_coder/: __init__.py  cli.py  config.py  eda.py  evaluate.py  logging_utils.py  pipeline.py  thresholds.py
src/mimic_icd_coder/data/: __init__.py  clean.py  ingest.py  labels.py  splits.py
src/mimic_icd_coder/models/: __init__.py  baseline.py  transformer.py
tests/: test_cli.py  test_eda.py  test_pipeline_integration.py  test_smoke.py
tests/fixtures/: synthetic_notes.py
